--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        >
-        <activity android:name=".activity.AddEventActivity"></activity>
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activity.UserProfileActivity"></activity>
+        <activity android:name=".activity.ViewEventActivity" />
+        <activity android:name=".activity.AddEventActivity" />
         <activity android:name=".activity.DashboardActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
