--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.eventscheduler">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- Required for complications to receive complication data and open the provider chooser. -->
+    <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.UserProfileActivity"></activity>
+        <activity android:name=".activity.MapsActivity" />
+        <activity android:name=".activity.NotificationDetailActivity" />
+        <activity android:name=".activity.NotificationActivity" />
+        <activity android:name=".activity.EventDetailActivity" />
+        <activity android:name=".activity.UserProfileActivity" />
         <activity android:name=".activity.ViewEventActivity" />
         <activity android:name=".activity.AddEventActivity" />
         <activity android:name=".activity.DashboardActivity" />
@@ -29,6 +38,21 @@
         </activity>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.SignupActivity" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <!--
+                  The API key for Google Maps-based APIs is defined as a string resource.
+                  (See the file "res/values/google_maps_api.xml").
+                  Note that the API key is linked to the encryption key used to sign the APK.
+                  You need a different API key for each encryption key, including the release key that is used to
+                  sign the APK for publishing.
+                  You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBxiITMa39Cj7bUs1gv2YR5gYIztCHujxE" />
     </application>
 
 </manifest>
